ola-parser/src/testdata/syntaxTests/metaTypes/typeNotRegularIdentifierVariable.sol
contract Test {
    fn f()  {
        u256 type;
    }
}
// ----
// ParserError 2314: (60-64): Expected ';' but got 'type'
